Closed Bug 13908 Opened 26 years ago Closed 26 years ago

Can't use cmd-m until I click in the bookmarks menu for the first time

Categories

(Core :: XUL, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mikepinkerton, Assigned: waterson)

Details

(Whiteboard: okay, maybe fix not understood)

Open the browser window and click in it to set focus. hit cmd-shift-m. Nothing happens. Click the bookmarks menu, but don't pick anything. hit cmd-shift-m again. Now the cmd-key equivalent works.
Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: M11
If I remove the observer/broadcaster from this equation by just putting onkeypress on the key node, this works correctly. Same thing with oncommand. So, something strage is happening with the observer/broadcaster... both with the menu needing to be pulled down, and with the shift key needing to be pressed. Both of these problems only manifest with broadcasters/observers in the mix.
Didn't I file this same bug a while back? Bug 13378 is the one I'm thinking of.
13378 looks similar, but was really a different issue. There is something even more interesting happening here
Assignee: saari → waterson
Status: ASSIGNED → NEW
Target Milestone: M11 → M10
Assigning to waterson and marking M10 as it prevents keybinding from functioning properly
Status: NEW → ASSIGNED
Whiteboard: fix understood. typing.
QA Contact: beppe → claudius
Whiteboard: fix understood. typing. → okay, maybe fix not understood
okay, i fixed the "forward declaration of observers" problem; however, i'm still seeing the problem that bug originally reported. Namely, I can't seem to run "Ctrl+B" until the bookmarks menu has been created once. At least this seems to be XP now: it's happening on Win32.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
changed landed in trunk and M10 branch.
Status: RESOLVED → VERIFIED
I looked at 19990930 builds on all platforms and 'Ctrl-B' or command-b on the mac all work without first creating the Bookmarks menu. marking VERIFIED.
You need to log in before you can comment on or make changes to this bug.