Bug 13908. Add code to hook up 'forward observer declarations'. r=hyatt.